--- a/homel_build_site/src/components/header.module.css
+++ b/homel_build_site/src/components/header.module.css
@@ -7,7 +7,7 @@ header{
     align-items: flex-end;
 
 }
-img{
+.headerLogo{
     margin-top: 14.63px;
 }
 .menu li {font-style: Medium;
